upadeted tiktok pages

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -19,6 +19,7 @@ li {
 :root {
   --color-gray: #71717a;
   --color-second-gray: #52525b;
+  --color-third-gray: #777777;
   --color-active-menu: #e4e4e7;
   --color-white: #fff;
   --color-main-blue: #0b69b7;
