--- a/src/app/components/FormList/formlist.module.scss
+++ b/src/app/components/FormList/formlist.module.scss
@@ -3,3 +3,25 @@
   max-height: 250px;
   overflow-y: auto;
 }
+
+.fbformItem {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  gap: 10px;
+  padding: 20px;
+  border-bottom: 1px solid #000;
+  cursor: pointer;
+}
+
+.formMarker {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #000;
+  border-radius: 50%;
+}
+.formMarkerActive {
+  background: #0b6ab771;
+  border-color: var(--color-main-blue);
+}
